Remove scroll snaping due to issue on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,6 @@ ul {
   height: 100%;
   overflow-y: auto;
   scroll-behavior: smooth;
-  scroll-snap-type: y proximity;
 }
 
 .section {
@@ -49,7 +48,6 @@ ul {
   align-items: center;
   min-height: 100vh;
   padding: 80px 0;
-  scroll-snap-align: start;
 }
 
 .container {
